fix: Minor spacing corrections/tweaks

--- a/src/scss/PageFilter.scss
+++ b/src/scss/PageFilter.scss
@@ -16,7 +16,7 @@
 		@include SeenEffect--fadeup();
 		background-color: $color-suld-25;
 		padding: between_cols(30, 80) 0 0 0;
-		margin-bottom: between_cols(50, 140);
+		margin-bottom: between_cols(50, 128);
 		@include extendBackgroundWithUnderlay();
 		display: flex;
 		flex-flow: row wrap;
